<resources>

    <string name="app_name">TranceFix Top25</string>

    <!-- Main screen -->
    <string name="tf_logo">TranceFix</string>
    <string name="top_title">TOP 25 2016</string>
    <string name="vote">Vote</string>
    <string name="view_charts">View Charts</string>
    <string name="contact">Contact</string>
    <string name="view_prizes">View Prizes</string>
    <string name="text_vote">VOTE</string>
    <string name="text_contact">CONTACT</string>
    <string name="text_prizes">PRIZES</string>
    <string name="text_charts">CHARTS</string>

    <!-- Login screen (before voting) -->
    <string name="vote_info_text">In order to vote, you must provide your TranceFix username and password. Login or register.</string>
    <string name="login_button_label">Continue</string>
    <string name="register_button_label">Register</string>
    <string name="username_field_hint">My TranceFix username</string>
    <string name="password_field_hint">My password</string>
    <string name="remember_info">Remember my details"</string>

    <!-- Vote screen -->
    <string name="first_fav_label">1st favourite:</string>
    <string name="second_fav_label">2nd favourite:</string>
    <string name="third_fav_label">3rd favourite:</string>
    <string name="fourth_fav_label">4th favourite:</string>
    <string name="fifth_fav_label">5th favourite:</string>
    <string name="track_format">Artist - Track Title (Mix / Remix)</string>
    <string name="button_save_label">Save</string>
    <string name="button_modify_label">Modify</string>
    <string name="button_submit_label">Submit</string>

    <!-- Monthly charts screen -->
    <string name="charts_header">Monthly Charts</string>
    <string name="top10_header">Click the month to view TOP10 chart</string>

    <!-- Prizes screen -->
    <string name="prize_header">Prizes</string>

    <string-array name="top10_jan">
        <item>Airwave - Gaijin</item>
        <item>Eco &amp; Brooke Forman - Liberation</item>
        <item>Craig Connelly &amp; Cate Kanell - Shipwreck</item>
        <item>John 00 Fleming - Tik Tok (Part 2)</item>
        <item>Matt Bowdidge - Second Sun</item>
        <item>Paul Miller - I Haven\'t Forgotten</item>
        <item>Suncatcher - It\'s Too Late</item>
        <item>DJ Misjah &amp; DJ Tim - Access (John Askew Remix)</item>
        <item>John 00 Fleming - Tik Tok (Part 1)</item>
        <item>LTN feat. Arielle Maren - Let Me Go</item>
    </string-array>

    <string-array name="top10_feb">
        <item>Rising Star Feat. Betsie Larkin - Safe Inside You</item>
        <item>Simon Bostock - Do You Know</item>
        <item>Thomas Datt - Prana Flow</item>
        <item>Alex di Stefano - I\'ve Got The Power</item>
        <item>Dan Stone - Shiki</item>
        <item>Suncatcher - Transylvania Cowgirl</item>
        <item>Bloodhound Gang - Dimes (Sean Tyas Remix)</item>
        <item>Simon Templar Vs. The Digital Blonde - The Wasteland (Part 2)</item>
        <item>Artur - Rays (Solarstone Retouch)</item>
        <item>Liam Wilson - Family</item>
    </string-array>

    <string-array name="top10_mar">
        <item>Dimension - Origami</item>
        <item>Will Atkinson - Numb The Pain</item>
        <item>Darren Porter - Cause &amp; Effect</item>
        <item>Mat Zo - Lucky Strike (Amir Hussain Bootleg.)</item>
        <item>Standerwick &amp; Philippe El Sisi feat. Ana Criado - Magic Light</item>
        <item>Easton feat. Roxanne Emery - Healing Rain (Bryan Kearney Remix)</item>
        <item>Fred Baker - Rebirth (Adam Ellis Remix)</item>
        <item>Rex Mundi - Garden</item>
        <item>Simon Bostock - Suraya</item>
        <item>Simon Patterson feat. Matt Adey - Time Stood Still</item>
    </string-array>

    <string-array name="top10_apr">
        <item>Photographer Feat. Susana - Find A Way</item>
        <item>Winkee - Assassins</item>
        <item>Dan Stone - Topaz</item>
        <item>John 00 Fleming - The Imperial Echo Of Devastation</item>
        <item>Vini Vici - The Tribe</item>
        <item>Amir Hussain - To The Lost</item>
        <item>Kaimo K - Mayhem</item>
        <item>Sam Jones &amp; Will Rees - Oversight</item>
        <item>Alex Di Stefano - Escape From The Past (Fred Baker Remix)</item>
        <item>Allen Watts - Gravity</item>
    </string-array>

    <string-array name="top10_may">
        <item>No chart for May yet.</item>
    </string-array>

    <string-array name="top10_jun">
        <item>No chart for June yet.</item>
    </string-array>

    <string-array name="top10_jul">
        <item>No chart for July yet.</item>
    </string-array>

    <string-array name="top10_aug">
        <item>No chart for August yet.</item>
    </string-array>

    <string-array name="top10_sep">
        <item>No chart for September yet.</item>
    </string-array>

    <string-array name="top10_oct">
        <item>No chart for October yet.</item>
    </string-array>

    <string-array name="top10_nov">
        <item>No chart for November yet.</item>
    </string-array>

    <string-array name="top10_dec">
        <item>No chart for December yet.</item>
    </string-array>

    <!-- Contact screen -->
    <string name="contact_header">Contact Form</string>

</resources>
