<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activity.MainActivity" >

    <ImageView
        android:layout_width="235dp"
        android:layout_height="100dp"
        android:id="@+id/tf_logo"
        android:src="@drawable/home_tf_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/tf_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/top_title"
        android:id="@+id/textTitle"
        android:textColor="@color/colorTextBrickRed"
        android:textSize="26sp"
        android:typeface="sans"
        android:layout_below="@+id/tf_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textStyle="bold" />

    <ImageButton
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/voteButton"
        android:src="@drawable/home_vote"
        android:scaleType="fitCenter"
        android:background="@color/colorAppBackground"
        android:layout_below="@+id/textTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/vote" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/prizesButton"
        android:src="@drawable/home_prizes"
        android:scaleType="fitCenter"
        android:background="@color/colorAppBackground"
        android:contentDescription="@string/view_prizes"
        android:layout_alignTop="@+id/textVote"
        android:layout_toLeftOf="@+id/voteButton"
        android:layout_toStartOf="@+id/voteButton" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/contactButton"
        android:src="@drawable/home_contact"
        android:scaleType="fitCenter"
        android:background="@color/colorAppBackground"
        android:layout_alignTop="@+id/prizesButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/contact" />

    <ImageButton
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/chartsButton"
        android:scaleType="fitCenter"
        android:src="@drawable/home_monthly"
        android:background="@color/colorAppBackground"
        android:layout_alignTop="@+id/prizesButton"
        android:layout_toRightOf="@+id/voteButton"
        android:layout_toEndOf="@+id/voteButton"
        android:contentDescription="@string/view_charts" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_vote"
        android:id="@+id/textVote"
        android:layout_below="@+id/voteButton"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorTextBrickRed"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_contact"
        android:id="@+id/textContact"
        android:textStyle="bold"
        android:textColor="@color/colorTextBlue"
        android:textAlignment="center"
        android:layout_below="@+id/contactButton"
        android:layout_centerHorizontal="true"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_prizes"
        android:id="@+id/textPrizes"
        android:layout_below="@+id/prizesButton"
        android:layout_alignRight="@+id/prizesButton"
        android:layout_alignEnd="@+id/prizesButton"
        android:layout_alignLeft="@+id/prizesButton"
        android:layout_alignStart="@+id/prizesButton"
        android:textColor="@color/colorTextBlue"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_charts"
        android:id="@+id/textCharts"
        android:layout_below="@+id/chartsButton"
        android:layout_toRightOf="@+id/voteButton"
        android:layout_alignRight="@+id/chartsButton"
        android:layout_alignEnd="@+id/chartsButton"
        android:textColor="@color/colorTextBlue"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textIsSelectable="false"
        android:layout_alignBottom="@+id/textPrizes" />

</RelativeLayout>
