<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vote_info_text"
        android:id="@+id/voteInfo"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textBrickRed" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterUsername"
        android:layout_below="@+id/voteInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text"
        android:hint="@string/username_field_hint"
        android:textAlignment="center"
        android:textColor="@color/textBlue"
        android:textColorHint="@color/textBlue" />

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/login_button_label"
        android:id="@+id/login"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:longClickable="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/register_button_label"
        android:id="@+id/register"
        android:layout_alignTop="@+id/login"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="38dp"
        android:layout_marginEnd="38dp"
        android:longClickable="true"
        android:onClick="registerOnTf" />
</RelativeLayout>
